--- a/examples/OpenML_Tutorial.ipynb
+++ b/examples/OpenML_Tutorial.ipynb
@@ -1539,7 +1539,7 @@
   "celltoolbar": "Slideshow",
   "colabVersion": "0.1",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1553,7 +1553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
